Small changes in notebook texts with added conclusion.

--- a/doc/tutorials/sandbox_config.ipynb
+++ b/doc/tutorials/sandbox_config.ipynb
@@ -19,8 +19,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: use the proper secret store.\n",
-    "\n",
     "from collections import UserDict\n",
     "\n",
     "class Secrets(UserDict):\n",
@@ -29,6 +27,14 @@
     "    def save(self, key: str, value: str) -> \"Secrets\":\n",
     "        self[key] = value\n",
     "        return self\n",
+    "\n",
+    "def get_value_as_attribute(self, key):\n",
+    "    val = self.get(key)\n",
+    "    if val is None:\n",
+    "        raise AttributeError(f'{key} value is not defined')\n",
+    "    return val\n",
+    "\n",
+    "Secrets.__getattr__ = get_value_as_attribute\n",
     "\n",
     "# For now just hardcode the configuration.\n",
     "sb_config = Secrets({    \n",
@@ -49,7 +55,7 @@
     "    'SCHEMA': 'IDA'\n",
     "})\n",
     "\n",
-    "EXTERNAL_HOST = f\"{sb_config.get('EXTERNAL_HOST_NAME')}:{sb_config.get('HOST_PORT')}\""
+    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\""
    ]
   },
   {
@@ -72,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Schema created in 81.08ms\n"
+      "Schema created in 39.17ms\n"
      ]
     }
    ],
@@ -82,7 +88,7 @@
     "stopwatch = Stopwatch()\n",
     "\n",
     "sql = f\"CREATE SCHEMA IF NOT EXISTS {sb_config.get('SCHEMA')}\"\n",
-    "with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.get('USER'), password=sb_config.get('PASSWORD'), compression=True) as conn:\n",
+    "with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
     "    conn.execute(query=sql)\n",
     "\n",
     "print(f\"Schema created in {stopwatch}\")"
