--- a/doc/tutorials/transformer/masked_modelling.ipynb
+++ b/doc/tutorials/transformer/masked_modelling.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "# Fill-Mask model\n",
     "\n",
-    "In this notebook we will load and use a masked language model. This kind of a model predicts which words would replace masked words in a sentence. Learn more about the Fill-Mask task <a href=\"https://huggingface.co/tasks/fill-mask\" target=\"_blank\" rel=\"noopener\">here</a>.\n",
+    "In this notebook we will load and use a masked language model. This kind of a model predicts which words would replace masked words in a sentence. Learn more about the Fill-Mask task <a href=\"https://huggingface.co/tasks/fill-mask\" target=\"_blank\" rel=\"noopener\">here</a>. Please also refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about the UDF used in this notebook.\n",
     "\n",
     "We will be running SQL queries using <a href=\"https://jupysql.ploomber.io/en/latest/quick-start.html\" target=\"_blank\" rel=\"noopener\"> JupySQL</a> SQL Magic.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
-    "Prior to using this notebook one needs to complete the follow steps:\n",
+    "Prior to using this notebook the following steps need to be completed:\n",
     "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
@@ -27,8 +27,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: start using the secret store.\n",
-    "\n",
     "from collections import UserDict\n",
     "\n",
     "class Secrets(UserDict):\n",
@@ -37,6 +35,14 @@
     "    def save(self, key: str, value: str) -> \"Secrets\":\n",
     "        self[key] = value\n",
     "        return self\n",
+    "\n",
+    "def get_value_as_attribute(self, key):\n",
+    "    val = self.get(key)\n",
+    "    if val is None:\n",
+    "        raise AttributeError(f'{key} value is not defined')\n",
+    "    return val\n",
+    "\n",
+    "Secrets.__getattr__ = get_value_as_attribute\n",
     "\n",
     "# For now just hardcode the configuration.\n",
     "sb_config = Secrets({\n",
@@ -63,9 +69,9 @@
     "    'TE_MODELS_CACHE_DIR': 'models_cache'\n",
     "})\n",
     "\n",
-    "EXTERNAL_HOST = f\"{sb_config.get('EXTERNAL_HOST_NAME')}:{sb_config.get('HOST_PORT')}\"\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.get('USER')}:{sb_config.get('PASSWORD')}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.get('SCHEMA')}?SSLCertificate=SSL_VERIFY_NONE\""
+    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
+    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
+    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\""
    ]
   },
   {
@@ -73,12 +79,12 @@
    "id": "ff882542-d473-4767-a035-5c2615080cae",
    "metadata": {},
    "source": [
-    "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation in the <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using Exasol SQLAlchemy driver."
+    "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation of <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using Exasol SQLAlchemy driver."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f0cc45d2-d5ae-4afc-9f1d-251923995990",
    "metadata": {},
    "outputs": [],
@@ -105,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "dede4beb-9bfe-413c-846a-a2e5c6eaa784",
    "metadata": {},
    "outputs": [],
@@ -116,10 +122,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "d4ca7457-501f-4c8e-a5c4-85d9e05670f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vagrant/data-science-sandbox/venv/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "%run ./model_retrieval.ipynb\n",
     "load_huggingface_model(MODEL_NAME, sb_config)"
@@ -137,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7c0ff55c-dada-4f5f-a923-8c86695723bf",
+   "execution_count": 5,
+   "id": "dca587eb-3213-4089-a844-4bb89cf1afa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,9 +161,15 @@
     "MY_TEXT = 'Take a deep [MASK] and hold it'\n",
     "\n",
     "# Make sure our text can be used in an SQL statement.\n",
-    "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")\n",
-    "\n",
-    "# We will collect 5 best answers."
+    "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3727075-4680-4f2f-83c2-17e5c22c6a57",
+   "metadata": {},
+   "source": [
+    "We will collect 5 best answers."
    ]
   },
   {
@@ -163,9 +184,9 @@
     "(\n",
     "    SELECT TE_FILLING_MASK_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.get(\"TE_BFS_CONN\")}}',\n",
-    "        '{{sb_config.get(\"TE_TOKEN_CONN\")}}',\n",
-    "        '{{sb_config.get(\"TE_MODELS_BFS_DIR\")}}',\n",
+    "        '{{sb_config.TE_BFS_CONN}}',\n",
+    "        '{{sb_config.TE_TOKEN_CONN}}',\n",
+    "        '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{MY_TEXT}}',\n",
     "        5\n",
@@ -175,9 +196,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c3c4047-2cbb-4111-a932-0224844c0f43",
+   "metadata": {},
+   "source": [
+    "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is getting quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
+    "\n",
+    "Another advantage of making predictions within the database is the enhanced data security. The task of safeguarding privacy can be simplified giving the fact that the source data never leaves the database machine.\n",
+    "\n",
+    "In a more practical application the input text would be stored in a column of a database table. For example, if we wanted to get the best answer for each row of the input table `MY_TEXT_TABLE` where text with a masked word is in the column `MY_TEXT_COLUMN` the SQL would look similar to this:\n",
+    "```\n",
+    "SELECT TE_FILLING_MASK_UDF(..., MY_TEXT_COLUMN, 1) FROM MY_TEXT_TABLE;\n",
+    "```\n",
+    "Please note, that the response time observed on the provided example with a single input will not be scaled up linearly in case of multiple inputs. Much of the latency falls on loading the model into the CPU memory from BucketFS. This needs to be done only once regardless of the number of inputs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a164578-5d2a-40e2-8bdd-2800765fe5c7",
+   "id": "851eadbc-a8fb-4ddf-bdda-4f4016ed0913",
    "metadata": {},
    "outputs": [],
    "source": []
