--- a/doc/tutorials/transformer/question_answering.ipynb
+++ b/doc/tutorials/transformer/question_answering.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "# Question answering model\n",
     "\n",
-    "In this notebook we will load and use a question answering language model that can retrieve the answer to a question from a given text. Learn more about the Question Answering task <a href=\"https://huggingface.co/tasks/question-answering\" target=\"_blank\" rel=\"noopener\">here</a>.\n",
+    "In this notebook we will load and use a question answering language model that can retrieve the answer to a question from a given text. Learn more about the Question Answering task <a href=\"https://huggingface.co/tasks/question-answering\" target=\"_blank\" rel=\"noopener\">here</a>. Please also refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about the UDF used in this notebook.\n",
     "\n",
     "We will be running SQL queries using <a href=\"https://jupysql.ploomber.io/en/latest/quick-start.html\" target=\"_blank\" rel=\"noopener\"> JupySQL</a> SQL Magic.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
-    "Prior to using this notebook one needs to complete the follow steps:\n",
+    "Prior to using this notebook the following steps need to be completed:\n",
     "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
@@ -22,13 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "a28bb232-38d5-445a-9e7a-6f72e80bc2cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: start using the secret store.\n",
-    "\n",
     "from collections import UserDict\n",
     "\n",
     "class Secrets(UserDict):\n",
@@ -37,6 +35,14 @@
     "    def save(self, key: str, value: str) -> \"Secrets\":\n",
     "        self[key] = value\n",
     "        return self\n",
+    "\n",
+    "def get_value_as_attribute(self, key):\n",
+    "    val = self.get(key)\n",
+    "    if val is None:\n",
+    "        raise AttributeError(f'{key} value is not defined')\n",
+    "    return val\n",
+    "\n",
+    "Secrets.__getattr__ = get_value_as_attribute\n",
     "\n",
     "# For now just hardcode the configuration.\n",
     "sb_config = Secrets({\n",
@@ -63,9 +69,9 @@
     "    'TE_MODELS_CACHE_DIR': 'models_cache'\n",
     "})\n",
     "\n",
-    "EXTERNAL_HOST = f\"{sb_config.get('EXTERNAL_HOST_NAME')}:{sb_config.get('HOST_PORT')}\"\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.get('USER')}:{sb_config.get('PASSWORD')}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.get('SCHEMA')}?SSLCertificate=SSL_VERIFY_NONE\""
+    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
+    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
+    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\""
    ]
   },
   {
@@ -73,12 +79,12 @@
    "id": "cd5e24a7-ecde-42cb-bdff-7df4fc4f5c84",
    "metadata": {},
    "source": [
-    "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation in the <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using Exasol SQLAlchemy driver."
+    "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation of <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using Exasol SQLAlchemy driver."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "13fa8443-17f5-4f75-8c2a-3a86d13d7911",
    "metadata": {},
    "outputs": [],
@@ -105,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6244f4ff-5054-486c-86ef-4f2389744ed9",
    "metadata": {},
    "outputs": [],
@@ -116,10 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "823b02ed-c50e-4908-a9de-7b358b449e8d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vagrant/data-science-sandbox/venv/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at deepset/roberta-base-squad2 and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
    "source": [
     "%run ./model_retrieval.ipynb\n",
     "load_huggingface_model(MODEL_NAME, sb_config)"
@@ -135,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "ccf3eb8d-6fcf-4d49-ba5f-0b8488aa7b0d",
+   "execution_count": 5,
+   "id": "087ac7fa-945a-429a-87ed-b45de2c69259",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,9 +170,15 @@
     "\n",
     "# Make sure our texts can be used in an SQL statement.\n",
     "TEST_QUESTION = TEST_QUESTION.replace(\"'\", \"''\")\n",
-    "TEST_CONTEXT1 = TEST_CONTEXT1.replace(\"'\", \"''\")\n",
-    "\n",
-    "# We will collect 5 best answers."
+    "TEST_CONTEXT1 = TEST_CONTEXT1.replace(\"'\", \"''\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43f3f6e9-6f40-49b2-bbba-8954c35b5e06",
+   "metadata": {},
+   "source": [
+    "We will collect 5 best answers."
    ]
   },
   {
@@ -170,9 +193,9 @@
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.get(\"TE_BFS_CONN\")}}',\n",
-    "        '{{sb_config.get(\"TE_TOKEN_CONN\")}}',\n",
-    "        '{{sb_config.get(\"TE_MODELS_BFS_DIR\")}}',\n",
+    "        '{{sb_config.TE_BFS_CONN}}',\n",
+    "        '{{sb_config.TE_TOKEN_CONN}}',\n",
+    "        '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{TEST_QUESTION}}',\n",
     "        '{{TEST_CONTEXT1}}',\n",
@@ -192,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "0787b6ac-f3db-4971-b010-0eac38bd1921",
    "metadata": {},
    "outputs": [],
@@ -219,9 +242,9 @@
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.get(\"TE_BFS_CONN\")}}',\n",
-    "        '{{sb_config.get(\"TE_TOKEN_CONN\")}}',\n",
-    "        '{{sb_config.get(\"TE_MODELS_BFS_DIR\")}}',\n",
+    "        '{{sb_config.TE_BFS_CONN}}',\n",
+    "        '{{sb_config.TE_TOKEN_CONN}}',\n",
+    "        '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{TEST_QUESTION}}',\n",
     "        '{{TEST_CONTEXT2}}',\n",
@@ -232,9 +255,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64bb5eca-b4e0-447c-bafd-f273c7c53a70",
+   "metadata": {},
+   "source": [
+    "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is getting quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
+    "\n",
+    "Another advantage of making predictions within the database is the enhanced data security. The task of safeguarding privacy can be simplified giving the fact that the source data never leaves the database machine.\n",
+    "\n",
+    "In a more practical application the question and the context would be stored in columns of a database table. For example, if we wanted to get the best answer for each row of the input table `MY_TEXT_TABLE` where the question is in the column `MY_QUESTION` and the context is in the column `MY_CONTEXT` the SQL would look similar to this:\n",
+    "```\n",
+    "SELECT TE_QUESTION_ANSWERING_UDF(..., MY_QUESTION, MY_CONTEXT, 1) FROM MY_TEXT_TABLE;\n",
+    "```\n",
+    "Please note, that the response time observed on the provided example with a single input will not be scaled up linearly in case of multiple inputs. Much of the latency falls on loading the model into the CPU memory from BucketFS. This needs to be done only once regardless of the number of inputs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83e81353-d82c-44a5-8275-cf7970a65bfc",
+   "id": "e3486cfa-53e2-47be-a445-cd6c13e654bb",
    "metadata": {},
    "outputs": [],
    "source": []
