--- a/doc/tutorials/transformer/te_init.ipynb
+++ b/doc/tutorials/transformer/te_init.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Here we will perform all the necessary steps to get the Transformer Extension functionality up and running. Please refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> for details on the required initialization steps. The extension module should have already been installed during the installation of this product, therefore the first step mentioned in the guide can be skipped.\n",
     "\n",
-    "We will be using a generic prediction UDF script. To execute queries and load data from Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
+    "To execute queries and load data from Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "7433e5e3-5258-4773-b202-7aa1b05303ef",
    "metadata": {},
    "outputs": [],
@@ -36,6 +36,14 @@
     "    def save(self, key: str, value: str) -> \"Secrets\":\n",
     "        self[key] = value\n",
     "        return self\n",
+    "\n",
+    "def get_value_as_attribute(self, key):\n",
+    "    val = self.get(key)\n",
+    "    if val is None:\n",
+    "        raise AttributeError(f'{key} value is not defined')\n",
+    "    return val\n",
+    "\n",
+    "Secrets.__getattr__ = get_value_as_attribute\n",
     "\n",
     "# For now just hardcode the configuration.\n",
     "sb_config = Secrets({    \n",
@@ -56,7 +64,7 @@
     "    'SCHEMA': 'IDA'\n",
     "})\n",
     "\n",
-    "EXTERNAL_HOST = f\"{sb_config.get('EXTERNAL_HOST_NAME')}:{sb_config.get('HOST_PORT')}\""
+    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\""
    ]
   },
   {
@@ -69,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "6bcaef63-06a3-40c1-aaa2-552d78c77125",
    "metadata": {},
    "outputs": [],
@@ -113,17 +121,17 @@
     "deploy_command = f\"\"\"\n",
     "python -m exasol_transformers_extension.deploy language-container \\\n",
     "    --dsn {EXTERNAL_HOST} \\\n",
-    "    --db-user {sb_config.get('USER')} \\\n",
-    "    --db-pass {sb_config.get('PASSWORD')} \\\n",
-    "    --bucketfs-name {sb_config.get('BUCKETFS_SERVICE')} \\\n",
-    "    --bucketfs-host {sb_config.get('EXTERNAL_HOST_NAME')} \\\n",
-    "    --bucketfs-port {sb_config.get('BUCKETFS_PORT')} \\\n",
-    "    --bucketfs-user {sb_config.get('BUCKETFS_USER')} \\\n",
-    "    --bucketfs-password {sb_config.get('BUCKETFS_PASSWORD')} \\\n",
-    "    --bucketfs-use-https {sb_config.get('BUCKETFS_USE_HTTPS')} \\\n",
-    "    --bucket {sb_config.get('BUCKETFS_BUCKET')} \\\n",
+    "    --db-user {sb_config.USER} \\\n",
+    "    --db-pass {sb_config.PASSWORD} \\\n",
+    "    --bucketfs-name {sb_config.BUCKETFS_SERVICE} \\\n",
+    "    --bucketfs-host {sb_config.EXTERNAL_HOST_NAME} \\\n",
+    "    --bucketfs-port {sb_config.BUCKETFS_PORT} \\\n",
+    "    --bucketfs-user {sb_config.BUCKETFS_USER} \\\n",
+    "    --bucketfs-password {sb_config.BUCKETFS_PASSWORD} \\\n",
+    "    --bucketfs-use-https {sb_config.BUCKETFS_USE_HTTPS} \\\n",
+    "    --bucket {sb_config.BUCKETFS_BUCKET} \\\n",
     "    --path-in-bucket . \\\n",
-    "    --language-alias {sb_config.get('SCRIPT_LANGUAGE_NAME')} \\\n",
+    "    --language-alias {sb_config.SCRIPT_LANGUAGE_NAME} \\\n",
     "    --version 0.5.0\n",
     "\"\"\"\n",
     "\n",
@@ -150,10 +158,10 @@
     "deploy_command = f\"\"\"\n",
     "python -m exasol_transformers_extension.deploy scripts \\\n",
     "    --dsn {EXTERNAL_HOST} \\\n",
-    "    --db-user {sb_config.get('USER')} \\\n",
-    "    --db-pass {sb_config.get('PASSWORD')} \\\n",
-    "    --schema {sb_config.get('SCHEMA')} \\\n",
-    "    --language-alias {sb_config.get('SCRIPT_LANGUAGE_NAME')} \\\n",
+    "    --db-user {sb_config.USER} \\\n",
+    "    --db-pass {sb_config.PASSWORD} \\\n",
+    "    --schema {sb_config.SCHEMA} \\\n",
+    "    --language-alias {sb_config.SCRIPT_LANGUAGE_NAME} \\\n",
     "    --no-use-ssl-cert-validation\n",
     "\"\"\"\n",
     "\n",
@@ -173,28 +181,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "383d7ea8-85dd-43f9-89b2-682060349e83",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyexasol\n",
     "\n",
-    "bfs_host = f\"{sb_config.get('EXTERNAL_HOST_NAME')}:{sb_config.get('BUCKETFS_PORT')}\"\n",
-    "bfs_url_prefix = 'https://' if sb_config.get('BUCKETFS_USE_HTTPS').lower() == 'true' else 'http://'\n",
-    "bfs_dest = f\"{bfs_url_prefix}{bfs_host}/{sb_config.get('BUCKETFS_BUCKET')}/{sb_config.get('TE_BFS_DIR')};{sb_config.get('BUCKETFS_SERVICE')}\"\n",
+    "bfs_host = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.BUCKETFS_PORT}\"\n",
+    "bfs_url_prefix = 'https://' if sb_config.BUCKETFS_USE_HTTPS.lower() == 'true' else 'http://'\n",
+    "bfs_dest = f\"{bfs_url_prefix}{bfs_host}/{sb_config.BUCKETFS_BUCKET}/{sb_config.TE_BFS_DIR};{sb_config.BUCKETFS_SERVICE}\"\n",
     "\n",
     "sql = f\"\"\"\n",
-    "CREATE OR REPLACE CONNECTION [{sb_config.get('TE_BFS_CONN')}]\n",
+    "CREATE OR REPLACE CONNECTION [{sb_config.TE_BFS_CONN}]\n",
     "    TO '{bfs_dest}'\n",
     "    USER {{BUCKETFS_USER!s}}\n",
     "    IDENTIFIED BY {{BUCKETFS_PASSWORD!s}}\n",
     "\"\"\"\n",
     "query_params = {\n",
-    "    \"BUCKETFS_USER\": sb_config.get('BUCKETFS_USER'), \n",
-    "    \"BUCKETFS_PASSWORD\": sb_config.get('BUCKETFS_PASSWORD')\n",
+    "    \"BUCKETFS_USER\": sb_config.BUCKETFS_USER, \n",
+    "    \"BUCKETFS_PASSWORD\": sb_config.BUCKETFS_PASSWORD\n",
     "}\n",
-    "with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.get('USER'), password=sb_config.get('PASSWORD'), compression=True) as conn:\n",
+    "with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
     "    conn.execute(query=sql, query_params=query_params)"
    ]
   },
@@ -210,21 +218,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "c0715b35-9a6c-4809-aa7a-1460fe7bf41b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyexasol\n",
     "\n",
-    "if sb_config.get('TE_TOKEN_CONN'):\n",
+    "if sb_config.TE_TOKEN_CONN:\n",
     "    sql = f\"\"\"\n",
-    "    CREATE OR REPLACE CONNECTION [{sb_config.get('TE_TOKEN_CONN')}]\n",
+    "    CREATE OR REPLACE CONNECTION [{sb_config.TE_TOKEN_CONN}]\n",
     "        TO ''\n",
     "        IDENTIFIED BY {{TOKEN!s}}\n",
     "    \"\"\"\n",
-    "    query_params = {\"TOKEN\": sb_config.get('TE_TOKEN')}\n",
-    "    with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.get('USER'), password=sb_config.get('PASSWORD'), compression=True) as conn:\n",
+    "    query_params = {\"TOKEN\": sb_config.TE_TOKEN}\n",
+    "    with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
     "        conn.execute(query=sql, query_params=query_params)"
    ]
   },
