--- a/doc/tutorials/transformer/text_generation.ipynb
+++ b/doc/tutorials/transformer/text_generation.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "# Generative text model\n",
     "\n",
-    "In this notebook we will load and use a generative language model that can produce a continuation for a given text. Learn more about the Text Generation task <a href=\"https://huggingface.co/tasks/text-generation\" target=\"_blank\" rel=\"noopener\">here</a>.\n",
+    "In this notebook we will load and use a generative language model that can produce a continuation for a given text. Learn more about the Text Generation task <a href=\"https://huggingface.co/tasks/text-generation\" target=\"_blank\" rel=\"noopener\">here</a>. Please also refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about the UDF used in this notebook.\n",
     "\n",
     "We will be using a generic prediction UDF script. To execute queries and load data from Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
-    "Prior to using this notebook one needs to complete the follow steps:\n",
+    "Prior to using this notebook the following steps need to be completed:\n",
     "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
@@ -27,8 +27,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: start using the secret store.\n",
-    "\n",
     "from collections import UserDict\n",
     "\n",
     "class Secrets(UserDict):\n",
@@ -63,9 +61,17 @@
     "    'TE_MODELS_CACHE_DIR': 'models_cache'\n",
     "})\n",
     "\n",
-    "EXTERNAL_HOST = f\"{sb_config.get('EXTERNAL_HOST_NAME')}:{sb_config.get('HOST_PORT')}\"\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.get('USER')}:{sb_config.get('PASSWORD')}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.get('SCHEMA')}?SSLCertificate=SSL_VERIFY_NONE\""
+    "def get_value_as_attribute(self, key):\n",
+    "    val = self.get(key)\n",
+    "    if val is None:\n",
+    "        raise AttributeError(f'{key} value is not defined')\n",
+    "    return val\n",
+    "\n",
+    "Secrets.__getattr__ = get_value_as_attribute\n",
+    "\n",
+    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
+    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
+    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\""
    ]
   },
   {
@@ -82,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "d73c9b44-93a0-4df3-9a8e-54e182027d61",
    "metadata": {},
    "outputs": [],
@@ -93,23 +99,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "57029a52-064b-4fda-80bf-289cce50ffc4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading (…)okenizer_config.json: 100%|█████████████████████████████████████████████████████████████| 685/685 [00:00<00:00, 80.6kB/s]\n",
-      "Downloading (…)lve/main/config.json: 100%|██████████████████████████████████████████████████████████████| 651/651 [00:00<00:00, 996kB/s]\n",
-      "Downloading (…)olve/main/vocab.json: 100%|███████████████████████████████████████████████████████████| 899k/899k [00:00<00:00, 5.27MB/s]\n",
-      "Downloading (…)olve/main/merges.txt: 100%|███████████████████████████████████████████████████████████| 456k/456k [00:00<00:00, 3.05MB/s]\n",
-      "Downloading (…)cial_tokens_map.json: 100%|██████████████████████████████████████████████████████████████| 441/441 [00:00<00:00, 325kB/s]\n",
-      "Downloading pytorch_model.bin: 100%|█████████████████████████████████████████████████████████████████| 251M/251M [00:14<00:00, 17.6MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ./model_retrieval.ipynb\n",
     "load_huggingface_model(MODEL_NAME, sb_config)"
@@ -127,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "aa3998b7-d886-4b0c-b0d2-92e54cc27b91",
    "metadata": {},
    "outputs": [],
@@ -140,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "56498899-79f8-471e-8337-983184dcd513",
    "metadata": {},
    "outputs": [],
@@ -152,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "94a45b81-29e3-40f8-9bb8-4b7a5c6eb28c",
    "metadata": {},
    "outputs": [],
@@ -171,26 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "51b0d826-519a-4e03-9ce0-3827d0756f1d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The bar-headed goose can fly at much higher speeds than the average goose.\n",
-      "I'm not sure if you're being sarcastic or not, but the bar-headed goose is\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sql = f\"\"\"\n",
-    "SELECT {sb_config.get(\"SCHEMA\")}.TE_TEXT_GENERATION_UDF(\n",
+    "SELECT {sb_config.SCHEMA}.TE_TEXT_GENERATION_UDF(\n",
     "    NULL,\n",
-    "    '{sb_config.get(\"TE_BFS_CONN\")}',\n",
-    "    '{sb_config.get(\"TE_TOKEN_CONN\")}',\n",
-    "    '{sb_config.get(\"TE_MODELS_BFS_DIR\")}',\n",
+    "    '{sb_config.TE_BFS_CONN}',\n",
+    "    '{sb_config.TE_TOKEN_CONN}',\n",
+    "    '{sb_config.TE_MODELS_BFS_DIR}',\n",
     "    '{MODEL_NAME}',\n",
     "    '{MY_TEXT}',\n",
     "    {MAX_LENGTH},\n",
@@ -198,7 +182,7 @@
     ")\n",
     "\"\"\"\n",
     "\n",
-    "with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.get('USER'), password=sb_config.get('PASSWORD'), compression=True) as conn:\n",
+    "with pyexasol.connect(dsn=EXTERNAL_HOST, user=sb_config.USER, password=sb_config.PASSWORD, compression=True) as conn:\n",
     "    result = conn.export_to_pandas(query_or_table=sql).squeeze()\n",
     "    MY_TEXT = result['GENERATED_TEXT']\n",
     "    # The error can be observed at result['ERROR_MESSAGE']\n",
