--- a/doc/tutorials/transformer/token_classification.ipynb
+++ b/doc/tutorials/transformer/token_classification.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "# Token classifier model \n",
     "\n",
-    "In this notebook we will load and use a token classifier language model that assigns labels to some tokens in a text. Learn more about the Question Answering task <a href=\"https://huggingface.co/tasks/token-classification\" target=\"_blank\" rel=\"noopener\">here</a>.\n",
+    "In this notebook we will load and use a token classifier language model that assigns labels to some tokens in a text. Learn more about the Question Answering task <a href=\"https://huggingface.co/tasks/token-classification\" target=\"_blank\" rel=\"noopener\">here</a>. Please also refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about the UDF used in this notebook.\n",
     "\n",
     "We will be running SQL queries using <a href=\"https://jupysql.ploomber.io/en/latest/quick-start.html\" target=\"_blank\" rel=\"noopener\"> JupySQL</a> SQL Magic.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
-    "Prior to using this notebook one needs to complete the follow steps:\n",
+    "Prior to using this notebook the following steps need to be completed:\n",
     "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
@@ -27,8 +27,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: start using the secret store.\n",
-    "\n",
     "from collections import UserDict\n",
     "\n",
     "class Secrets(UserDict):\n",
@@ -37,6 +35,14 @@
     "    def save(self, key: str, value: str) -> \"Secrets\":\n",
     "        self[key] = value\n",
     "        return self\n",
+    "\n",
+    "def get_value_as_attribute(self, key):\n",
+    "    val = self.get(key)\n",
+    "    if val is None:\n",
+    "        raise AttributeError(f'{key} value is not defined')\n",
+    "    return val\n",
+    "\n",
+    "Secrets.__getattr__ = get_value_as_attribute\n",
     "\n",
     "# For now just hardcode the configuration.\n",
     "sb_config = Secrets({\n",
@@ -63,9 +69,9 @@
     "    'TE_MODELS_CACHE_DIR': 'models_cache'\n",
     "})\n",
     "\n",
-    "EXTERNAL_HOST = f\"{sb_config.get('EXTERNAL_HOST_NAME')}:{sb_config.get('HOST_PORT')}\"\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.get('USER')}:{sb_config.get('PASSWORD')}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.get('SCHEMA')}?SSLCertificate=SSL_VERIFY_NONE\""
+    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
+    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
+    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\""
    ]
   },
   {
@@ -73,12 +79,12 @@
    "id": "226cfcbf-fef1-47ca-9134-4e9dc6f333a9",
    "metadata": {},
    "source": [
-    "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation in the <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using Exasol SQLAlchemy driver."
+    "Let's bring up JupySQL and connect to the database via SQLAlchemy. Please refer to the documentation of <a href=\"https://github.com/exasol/sqlalchemy-exasol\" target=\"_blank\" rel=\"noopener\">sqlalchemy-exasol</a> for details on how to connect to the database using Exasol SQLAlchemy driver."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e9193a95-2d8c-4722-ab22-10b75d2c5253",
    "metadata": {},
    "outputs": [],
@@ -105,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "26710f2d-a245-43e8-9ff2-292a60dbb19a",
    "metadata": {},
    "outputs": [],
@@ -116,13 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "34747971-46a0-4774-93c0-40cea26706fa",
    "metadata": {},
    "outputs": [],
    "source": [
     "%run ./model_retrieval.ipynb\n",
-    "load_huggingface_model(MODEL_NAME, sb_config, method='udf')"
+    "load_huggingface_model(MODEL_NAME, sb_config)"
    ]
   },
   {
@@ -135,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "59ec8aee-e40f-44e8-b94b-49c374b923f4",
    "metadata": {},
    "outputs": [],
@@ -146,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "cc5b5ab6-4481-4b95-bcaa-86ad4da0d6e4",
    "metadata": {},
    "outputs": [],
@@ -174,9 +180,9 @@
     "(\n",
     "    SELECT TE_TOKEN_CLASSIFICATION_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.get(\"TE_BFS_CONN\")}}',\n",
-    "        '{{sb_config.get(\"TE_TOKEN_CONN\")}}',\n",
-    "        '{{sb_config.get(\"TE_MODELS_BFS_DIR\")}}',\n",
+    "        '{{sb_config.TE_BFS_CONN}}',\n",
+    "        '{{sb_config.TE_TOKEN_CONN}}',\n",
+    "        '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{MY_TEXT}}',\n",
     "        NULL\n",
@@ -186,12 +192,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "551c7581-16a4-4992-b031-e4fffa09cc46",
+   "cell_type": "markdown",
+   "id": "e1ae1f3c-5639-4935-9c28-3d8404587882",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is getting quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
+    "\n",
+    "Another advantage of making predictions within the database is the enhanced data security. The task of safeguarding privacy can be simplified giving the fact that the source data never leaves the database machine.\n",
+    "\n",
+    "In a more practical application we might want to tokenize text stored in a column of a database table. One possible use case would be collecting statistics of token occurrence in say customer reviews, where each review is stored in a separate row. For example, if the text to be tokenized is stored in the column `MY_TEXT_COLUMN` of the table `MY_TEXT_TABLE` and we want to get the counts of top 10 tokens the SQL would look similar to this:\n",
+    "```\n",
+    "SELECT entity, COUNT(*) as occurrence\n",
+    "FROM (\n",
+    "    SELECT TE_TOKEN_CLASSIFICATION_UDF(..., MY_TEXT_COLUMN, NULL)\n",
+    "    FROM MY_TEXT_TABLE\n",
+    ") tokenized \n",
+    "GROUP BY entity\n",
+    "ORDER BY 2 DESC\n",
+    "LIMIT 10;\n",
+    "```\n",
+    "Please note, that the response time observed on the provided example with a single input will not be scaled up linearly in case of multiple inputs. Much of the latency falls on loading the model into the CPU memory from BucketFS. This needs to be done only once regardless of the number of inputs."
+   ]
   }
  ],
  "metadata": {
