--- a/doc/tutorials/transformer/translation.ipynb
+++ b/doc/tutorials/transformer/translation.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "# Translation model\n",
     "\n",
-    "In this notebook we will load and use a language translation model. Learn more about the Translation task <a href=\"https://huggingface.co/tasks/translation\" target=\"_blank\" rel=\"noopener\">here</a>.\n",
+    "In this notebook we will load and use a language translation model. Learn more about the Translation task <a href=\"https://huggingface.co/tasks/translation\" target=\"_blank\" rel=\"noopener\">here</a>. Please also refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about the UDF used in this notebook.\n",
     "\n",
     "We will be running SQL queries using <a href=\"https://jupysql.ploomber.io/en/latest/quick-start.html\" target=\"_blank\" rel=\"noopener\"> JupySQL</a> SQL Magic.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
-    "Prior to using this notebook one needs to complete the follow steps:\n",
+    "Prior to using this notebook the following steps need to be completed:\n",
     "1. [Configure the sandbox](../sendbox_config.ipynb).\n",
     "2. [Initialize the Transformer Extension](te_init.ipynb).\n",
     "\n",
@@ -27,8 +27,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: start using the secret store.\n",
-    "\n",
     "from collections import UserDict\n",
     "\n",
     "class Secrets(UserDict):\n",
@@ -37,6 +35,14 @@
     "    def save(self, key: str, value: str) -> \"Secrets\":\n",
     "        self[key] = value\n",
     "        return self\n",
+    "\n",
+    "def get_value_as_attribute(self, key):\n",
+    "    val = self.get(key)\n",
+    "    if val is None:\n",
+    "        raise AttributeError(f'{key} value is not defined')\n",
+    "    return val\n",
+    "\n",
+    "Secrets.__getattr__ = get_value_as_attribute\n",
     "\n",
     "# For now just hardcode the configuration.\n",
     "sb_config = Secrets({\n",
@@ -63,9 +69,9 @@
     "    'TE_MODELS_CACHE_DIR': 'models_cache'\n",
     "})\n",
     "\n",
-    "EXTERNAL_HOST = f\"{sb_config.get('EXTERNAL_HOST_NAME')}:{sb_config.get('HOST_PORT')}\"\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.get('USER')}:{sb_config.get('PASSWORD')}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.get('SCHEMA')}?SSLCertificate=SSL_VERIFY_NONE\""
+    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
+    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
+    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\""
    ]
   },
   {
@@ -74,7 +80,7 @@
    "metadata": {},
    "source": [
     "Let's bring up JupySQL and connect to the database via SQLAlchemy. \n",
-    "Please refer to the documentation in the [sqlalchemy-exasol](https://github.com/exasol/sqlalchemy-exasol) for details on how to connect to the database using Exasol SQLAlchemy driver."
+    "Please refer to the documentation of [sqlalchemy-exasol](https://github.com/exasol/sqlalchemy-exasol) for details on how to connect to the database using Exasol SQLAlchemy driver."
    ]
   },
   {
@@ -161,9 +167,9 @@
     "%%sql\n",
     "SELECT TE_TRANSLATION_UDF(\n",
     "    NULL,\n",
-    "    '{{sb_config.get(\"TE_BFS_CONN\")}}',\n",
-    "    '{{sb_config.get(\"TE_TOKEN_CONN\")}}',\n",
-    "    '{{sb_config.get(\"TE_MODELS_BFS_DIR\")}}',\n",
+    "    '{{sb_config.TE_BFS_CONN}}',\n",
+    "    '{{sb_config.TE_TOKEN_CONN}}',\n",
+    "    '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
     "    '{{MODEL_NAME}}',\n",
     "    '{{MY_TEXT}}',\n",
     "    '',\n",
@@ -173,12 +179,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55077fac-070a-4ab8-8752-84c99410abb4",
+   "cell_type": "markdown",
+   "id": "2122e3ca-cfa9-4b74-b60f-13ce1429e994",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is getting quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
+    "\n",
+    "Another advantage of making predictions within the database is the enhanced data security. The task of safeguarding privacy can be simplified giving the fact that the source data never leaves the database machine.\n",
+    "\n",
+    "A more practical application would involve translating multiple pieces of text stored in a column of a database table. For example, we might want to do the translation for each row of the input table `MY_TEXT_TABLE` where the text in the original language is stored in the column `MY_ORIGINAL_TEXT`. The SQL for this task would look similar to this:\n",
+    "```\n",
+    "SELECT TE_TRANSLATION_UDF(..., MY_ORIGINAL_TEXT, ...) FROM MY_TEXT_TABLE;\n",
+    "```\n",
+    "Please note, that the response time observed on the provided example with a single input will not be scaled up linearly in case of multiple inputs. Much of the latency falls on loading the model into the CPU memory from BucketFS. This needs to be done only once regardless of the number of inputs."
+   ]
   }
  ],
  "metadata": {
